<resources>
    <string name="app_name">Esther Newsfeed App</string>

    <string name="loading">loading, please wait....</string>
    <string name="loading_finished">onLoadFinished:  </string>
    <string name="loading_fail_connection">No internet connection\nPlease connect to the internet then swipe down to refresh </string>
    <string name="loading_list_items">Loading more news …</string>
    <string name="home_screen_text">Please tap the setting icon on the upper \n right to select your newsfeed section </string>
    <string name="toast_no_internet">No internet connection found </string>
    <string name="toast_refresh">onRefresh: called from SwipeRefreshLayout</string>


    <string name="news_sections">Sections</string>
    <string name="news_sections_key">mySections</string>
    <string name="news_sections_summary">Select the sections you want to be displayed</string>
    <string name="news_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="newsfeed_per_page_key">News_Per_Page</string>
    <string name="newsfeed_per_page_def">10</string>
    <string name="newsfeed_per_page_title">Number of newsfeed</string>
    <string name="newsfeed_per_page_summary">Defines number of news to be displayed for each section</string>
    <string name="news_sort_order_key">sort_order</string>
    <string name="news_sort_order_def">newest</string>
    <string name="news_sort_order_title">Sort order</string>
    <string name="news_sort_order_summary">Defines the order of the news</string>
    <string name="by">by</string>
    <string name="home">Home</string>
    <string name="browser_intent_error">Could not find a web browser</string>
    <string name="edit_text_hint">value can not be more than 100 or less than 1</string>
    <string name="news_per_page_warning">Value can not be more than 100 or less than 1</string>
</resources>
