<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <MultiSelectListPreference
        android:defaultValue="@null"
        android:key="@string/news_sections_key"
        android:summary="@string/news_sections_summary"
        android:title="@string/news_sections" />
    <EditTextPreference
        android:defaultValue="@string/newsfeed_per_page_def"
        android:hint="@string/edit_text_hint"
        android:inputType="numberDecimal"
        android:key="@string/newsfeed_per_page_key"
        android:max="2"
        android:selectAllOnFocus="true"
        android:summary="@string/newsfeed_per_page_summary"
        android:title="@string/newsfeed_per_page_title" />
    <ListPreference
        android:defaultValue="@string/news_sort_order_def"
        android:key="@string/news_sort_order_key"
        android:summary="@string/news_sort_order_summary"
        android:title="@string/news_sort_order_title" />
</PreferenceScreen>